--- a/modules/sonix/mtree/SNX.data.dist.in
+++ b/modules/sonix/mtree/SNX.data.dist.in
@@ -1,17 +1,3 @@
-# ***************** <SNX heading BEGIN do not edit this line> *****************
-#
-# sonix
-#
-# Original Authors:
-#   Kevin Meinert, Carolina Cruz-Neira
-#
-# -----------------------------------------------------------------
-# File:          $RCSfile$
-# Date modified: $Date$
-# Version:       $Revision$
-# -----------------------------------------------------------------
-#
-# ****************** <SNX heading END do not edit this line> ******************
 # ************** <auto-copyright.pl BEGIN do not edit this line> **************
 #
 # VR Juggler is (C) Copyright 1998-2003 by Iowa State University
@@ -36,19 +22,23 @@
 # Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 # Boston, MA 02111-1307, USA.
 #
+# -----------------------------------------------------------------
+# File:          $RCSfile$
+# Date modified: $Date$
+# Version:       $Revision$
+# -----------------------------------------------------------------
+#
 # *************** <auto-copyright.pl END do not edit this line> ***************
 
-# This file defines the specification for the base installation directory
-# tree for Sonix.
+# This file defines the specification for the data directory tree for the
+# Sonix installation.
 #
 # $Id$
 
 /set type=dir mode=@DIR_PERMS@ uname=@OWNER_NAME@ gname=@GROUP_NAME@
 .
-    include
-        snx
-            Util
-            ..
-        ..
+    data
+    ..
+    plugins
     ..
 ..
