--- a/juggler/modules/sonix/snx/Makefile.in
+++ b/juggler/modules/sonix/snx/Makefile.in
@@ -43,12 +43,10 @@ default: all
 
 include @topdir@/make.defs.mk
 
-# the include path directory to install to ...
 includedir=	@includedir@/snx
 srcdir=		@srcdir@
 top_srcdir=	@top_srcdir@
 INSTALL=	@INSTALL@
-# lib specific: (where to dump the .o files)
 SUBOBJDIR=	$(SNX_LIBRARY)
 
 ifeq ($(OS_TYPE), Win32)
@@ -64,8 +62,7 @@ ifeq ($(OS_TYPE), Win32)
    SRCS+=	dirent-win32.cpp
 endif
 
-SUBDIR=		plugins		\
-		Util
+SUBDIR=		Util
 
 include $(MKPATH)/dpp.obj-subdir.mk
 
