Do not try to build a non-existent target.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13939 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/jackal/plugins/Makefile.in
+++ b/juggler/modules/jackal/plugins/Makefile.in
@@ -142,7 +142,7 @@ ifndef NO_CLEAN
 	@$(MAKE) clobber
 endif
 	@$(MAKE) $(BEFOREBUILD)
-	@$(MAKE) libs build-java
+	@$(MAKE) libs
 	@echo "---------------------------------------------------------------"
 	@echo "Beginning JCCL plug-in installation process"
 	@echo "---------------------------------------------------------------"
@@ -202,7 +202,7 @@ ifndef NO_CLEAN
 	@$(MAKE) clobber
 endif
 	@$(MAKE) $(BEFOREBUILD)
-	@$(MAKE) BUILD_PROF_C=N BUILD_PROF_CXX=N libs build-java
+	@$(MAKE) BUILD_PROF_C=N BUILD_PROF_CXX=N libs
 ifdef GLOBAL_BUILD
 	@$(MAKE) links
 endif
