Moved the Sonix plug-ins from juggler/modules/sonix/snx/plugins to juggler/modules/sonix/plugins.  The Sonix plug-ins now have their own build system that is run after the Sonix build completes successfully. This new build system is based on the one used for JCCL and Gadgeteer plug-ins.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk/juggler@13944 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler.cfg
+++ b/juggler.cfg
@@ -35,6 +35,12 @@ Sonix
    modules/sonix: SNX_CONFIG=sonix-config, SNX_BASE_DIR=instlinks;
 }
 
+SonixPlugIns
+{
+   depend Sonix;
+   modules/sonix/plugins;
+}
+
 Gadgeteer
 {
    depend JCCL;
@@ -52,6 +58,7 @@ VRJuggler
 {
    depend JCCLPlugIns;
    depend Sonix;
+   depend SonixPlugIns;
    depend Gadgeteer;
    depend GadgeteerDrivers;
    modules/vrjuggler: VRJ_CONFIG=vrjuggler-config, VJ_BASE_DIR=instlinks;
