--- a/modules/sonix/plugins/OpenAL/Makefile.in
+++ b/modules/sonix/plugins/OpenAL/Makefile.in
@@ -1,18 +1,3 @@
-
-# ***************** <SNX heading BEGIN do not edit this line> *****************
-#
-# sonix
-#
-# Original Authors:
-#   Kevin Meinert
-#
-# -----------------------------------------------------------------
-# File:          $RCSfile$
-# Date modified: $Date$
-# Version:       $Revision$
-# -----------------------------------------------------------------
-#
-# ****************** <SNX heading END do not edit this line> ******************
 # ************** <auto-copyright.pl BEGIN do not edit this line> **************
 #
 # VR Juggler is (C) Copyright 1998-2003 by Iowa State University
@@ -37,42 +22,50 @@
 # Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 # Boston, MA 02111-1307, USA.
 #
+# -----------------------------------------------------------------
+# File:          $RCSfile$
+# Date modified: $Date$
+# Version:       $Revision$
+# -----------------------------------------------------------------
+#
 # *************** <auto-copyright.pl END do not edit this line> ***************
+
+# -----------------------------------------------------------------------------
+# Makefile.in for sonix/plugins/OpenAL.  It requires GNU make.
+#
+# Generated for use on @PLATFORM@
+# -----------------------------------------------------------------------------
+
 default: all
 
+# Include common definitions.
 include @topdir@/make.defs.mk
 
-SRCS = OpenALSoundImplementation.cpp
+PLUGIN_NAME=	OpenAL_snd
 
-# the include path directory to install to ...
-includedir	= @includedir@/snx
+srcdir=			@srcdir@
+top_srcdir=		@top_srcdir@
+EXTRA_INCLUDES+=	@AL_INCLUDES@
+INSTALL=		@INSTALL@
+INSTALL_FILES=		
+POST_DSO_PLUGIN_DEPS=	@AL_LDFLAGS@ @LIBOPENAL@
+SUBOBJDIR=		$(PLUGIN_NAME)
 
-srcdir		= @srcdir@
-top_srcdir	= @top_srcdir@
-INSTALL		= @INSTALL@
+HAVE_OPENAL=		@HAVE_OPENAL@
 
-EXTRA_SRCS_PATH = $(srcdir)/plugins
-EXTRA_DEFS	+= -DNO_SELF_REGISTER
-
-OPENAL_INCLUDES	= @AL_INCLUDES@
-EXTRA_INCLUDES	+= $(OPENAL_INCLUDES)
-
-ifeq ($(OS_TYPE), Win32)
-   EXTRA_DEFS+=	-DWIN32
+ifeq ($(HAVE_OPENAL), Y)
+C_AFTERBUILD=	plugin-dso
+SRCS=		OpenALSoundImplementation.cpp
 endif
 
-##################################################################
-
-# lib specific: (where to dump the .o files)
-SUBOBJDIR       = $(OPENAL_LIBRARY)
-
 include $(MKPATH)/dpp.obj.mk
+include @topdir@/plugin.defs.mk
 
 # -----------------------------------------------------------------------------
 # Include dependencies generated automatically.
 # -----------------------------------------------------------------------------
 ifndef DO_CLEANDEPEND
 ifndef DO_BEFOREBUILD
-    -include $(DEPEND_FILES)
+   -include $(DEPEND_FILES)
 endif
 endif
