--- a/juggler/juggler.cfg
+++ b/juggler/juggler.cfg
@@ -35,6 +35,12 @@ Sonix
    modules/sonix: SNX_CONFIG=sonix-config, SNX_BASE_DIR=instlinks;
 }
 
+SonixPlugIns
+{
+   depend Sonix;
+   modules/sonix/plugins;
+}
+
 Gadgeteer
 {
    depend JCCL;
@@ -52,6 +58,7 @@ VRJuggler
 {
    depend JCCLPlugIns;
    depend Sonix;
+   depend SonixPlugIns;
    depend Gadgeteer;
    depend GadgeteerDrivers;
    modules/vrjuggler: VRJ_CONFIG=vrjuggler-config, VJ_BASE_DIR=instlinks;
