--- a/juggler/modules/sonix/configure.in
+++ b/juggler/modules/sonix/configure.in
@@ -61,27 +61,6 @@ DPP_GEN_RECONFIG
 # ------------------------------------------------------ #
 DPP_STD_CPP(yes)
 
-# does the user want OpenAL?
-AC_ARG_ENABLE(openal,
-              [  --enable-openal         Compile in OpenAL support       [default=yes]],
-              [OPENAL_ENABLED="$enableval"], [OPENAL_ENABLED='yes'])
-
-# does the user want Subsynth?
-AC_ARG_ENABLE(subsynth,
-              [  --enable-subsynth       Compile in Subsynth support     [default=yes]],
-              [SUBSYNTH_ENABLED="$enableval"], [SUBSYNTH_ENABLED='yes'])
-
-# does the user want AudioWorks?
-AC_ARG_ENABLE(audioworks,
-              [  --enable-audioworks     Compile in AudioWorks support   [default=yes]],
-              [AUDIOWORKS_ENABLED="$enableval"], [AUDIOWORKS_ENABLED='yes'])
-
-# does the user want Audiere?
-AC_ARG_ENABLE(audiere,
-              [  --enable-audiere        Compile in Audiere support
-              [default=yes]],
-              [AUDIERE_ENABLED="$enableval"], [AUDIERE_ENABLED='yes'])
-
 # -------------------------------------------- #
 # --with-pkg[=arg] and --without-pkg arguments #
 # -------------------------------------------- #
@@ -155,14 +134,14 @@ DPP_PROG_LINKER
 # Checks for libraries.
 # -----------------------------------------------------------------------------
 VPR_PATH([0.19.0], [VPR_SUBSYSTEM=`$VPR_CONFIG --subsystem`],
-         [AC_MSG_ERROR([*** VPR required for sonix***])])
+         [AC_MSG_ERROR([*** VPR required for Sonix ***])])
 
 # find and append GMTL flags...
 snx_save_CPPFLAGS="$CPPFLAGS"
 CPPFLAGS="$CPPFLAGS $STDFLAGS"
 GMTL_PATH(0.1.9, [$JUGGLERROOT_ABS/external/GMTL],
           [$JUGGLERROOT_ABS/external/GMTL], ,
-          [AC_MSG_ERROR([*** GMTL required for sonix ***])])
+          [AC_MSG_ERROR([*** GMTL required for Sonix ***])])
 CPPFLAGS="$snx_save_CPPFLAGS"
 
 if test "x$GMTL_ROOT" != "x$JUGGLERROOT_ABS/external/GMTL" ; then
@@ -172,66 +151,7 @@ else
 fi
 
 DPP_CHECK_DYNLOAD_LIB
-
 DPP_HAVE_CPPUNIT([1.9.10])
-
-# Append the OpenAL stuff.
-OPENAL_API='N'
-if test "x$OPENAL_ENABLED" = "xyes" ; then
-   snx_save_LIBS="$LIBS"
-   LIBS="$LIBS $DYN_LOAD_LIB"
-
-   DPP_HAVE_OPENAL([/usr/local], ,
-      [AC_MSG_WARN([*** OpenAL plug-in cannot be built. ***])])
-
-   LIBS="$snx_save_LIBS"
-
-   if test "x$OPENAL" = "xyes" ; then
-      if test "x$VPR_SUBSYSTEM" != "xSPROC"; then
-         DPP_PTHREAD_FINISH
-         OPENAL_API='Y'
-      else
-         AC_MSG_WARN([*** OpenAL cannot be used with a VPR installation using SPROC. ***])
-      fi
-   fi
-fi
-
-# Append the Subsynth stuff.
-SUBSYNTH_API='N'
-if test "x$SUBSYNTH_ENABLED" = "xyes" ; then
-   DPP_HAVE_SUBSYNTH([/usr], SUBSYNTH_API='Y',
-      [AC_MSG_WARN([*** Subsynth plug-in cannot be built. ***])])
-fi
-
-# Append the AudioWorks stuff.
-AUDIOWORKS_API='N'
-if test "x$AUDIOWORKS_ENABLED" = "xyes" ; then
-   DPP_HAVE_AUDIOWORKS([/usr], ,
-      [AC_MSG_WARN([*** AudioWorks plug-in cannot be built. ***])])
-
-   if test "x$AUDIOWORKS" = "xyes" ; then
-      if test "x$VPR_SUBSYSTEM" = "xSPROC"; then
-         AUDIOWORKS_API='Y'
-      else
-         AC_MSG_WARN([*** AudioWorks cannot be used with a VPR installation that does not use SPROC. ***])
-      fi
-   fi
-fi
-
-# Append the Audiere stuff.
-AUDIERE_API='N'
-if test "x$AUDIERE_ENABLED" = "xyes" ; then
-   DPP_HAVE_AUDIERE([/usr], ,
-      [AC_MSG_WARN([*** Audiere plug-in cannot be built. ***])])
-
-   if test "x$AUDIERE" = "xyes" ; then
-      if test "x$VPR_SUBSYSTEM" = "xPOSIX" ; then
-         AUDIERE_API='Y'
-      else
-         AC_MSG_WARN([*** Audiere connot be used with a VPR installation that does not use POSIX. ***])
-      fi
-   fi
-fi
 
 # -----------------------------------------------------------------------------
 # Miscellaneous checks.
@@ -426,11 +346,6 @@ AC_SUBST(snx_extra_libs)
 AC_SUBST(snx_n32_flags)
 AC_SUBST(snx_64_flags)
 
-AC_SUBST(AUDIERE_API)
-AC_SUBST(AUDIOWORKS_API)
-AC_SUBST(OPENAL_API)
-AC_SUBST(SUBSYNTH_API)
-
 # -----------------------------------------------------------------------------
 # Final file generation step.
 # -----------------------------------------------------------------------------
@@ -444,11 +359,6 @@ AC_CONFIG_FILES([
    common.defs.mk
    make.defs.mk
    snx/Makefile
-   snx/plugins/Makefile
-   snx/plugins/AudioWorks/Makefile
-   snx/plugins/Audiere/Makefile
-   snx/plugins/OpenAL/Makefile
-   snx/plugins/Subsynth/Makefile
    snx/Util/Makefile
    samples/Makefile
    samples/opengl/Makefile
