Fixed the IRIX build.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13956 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/sonix/plugins/configure.in
+++ b/juggler/modules/sonix/plugins/configure.in
@@ -233,9 +233,9 @@ DPP_INSTALLER(vrjuggler, 0644, 0755, 0755)
 #   CXXFLAGS="-fhonor-std $CXXFLAGS"
 #fi
 
-CXXFLAGS="$CXXFLAGS $SNX_CXXFLAGS_MIN"
+CXXFLAGS="$CXXFLAGS $VPR_CXXFLAGS_MIN $SNX_CXXFLAGS_MIN"
 BASE_APP_LINK_FLAGS="$STDFLAGS $BASE_APP_LINK_FLAGS"
-DEPEND_FLAGS="$SNX_INCLUDES_MIN"
+DEPEND_FLAGS="$VPR_INCLUDES_MIN $SNX_INCLUDES_MIN"
 
 if test "x$PLATFORM" = "xIRIX" -a "x$USE_GCC" = "xno" ; then
 #    CFLAGS="$CFLAGS -woff 1685,515,608,658,799,803,852,1048,1233,1499"
