Bug fixed:	The plug-in entry points were not being compiled into the 		plug-in.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13962 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/sonix/plugins/make.defs.mk.in
+++ b/juggler/modules/sonix/plugins/make.defs.mk.in
@@ -107,7 +107,7 @@ DYNAMICLIB_EXT=         @DYNAMICLIB_EXT@
 # -----------------------------------------------------------------------------
 EXTRA_CFLAGS=		$(CFLAGS_DYNLIB)
 EXTRA_CXXFLAGS=		$(CXXFLAGS_DYNLIB)
-EXTRA_DEFS+=		-D_SNX_PLUGIN_BUILD_
+EXTRA_DEFS+=		-D_SNX_PLUGIN_BUILD_ -DNO_SELF_REGISTER
 EXTRA_DEPEND_FLAGS=	-I$(PLUGIN_ROOT_ABS)
 EXTRA_INCLUDES=		-I$(top_srcdir)
 EXTRA_LDFLAGS=		@EXTRA_LDFLAGS@
