SF Bug#:	704190 (partial)
Separate the Sonix plug-ins in the installation directory structure by
type (optimized or debuging).  In snx::SoundFactory, search the
appropriate directory based on the build type, which can be determined at
compile time.


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13965 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/sonix/plugins/plugin.defs.mk.in
+++ b/juggler/modules/sonix/plugins/plugin.defs.mk.in
@@ -44,7 +44,13 @@
 # Common code for plug-in DSOs.
 # -----------------------------------------------------------------------------
 ifeq ($(BUILD_TYPE), dbg)
-   BUILD_TYPE_EXT=	_d
+   BUILD_TYPE_DIR=	dbg
+endif
+ifeq ($(BUILD_TYPE), opt)
+   BUILD_TYPE_DIR=	opt
+endif
+ifeq ($(BUILD_TYPE), prof)
+   BUILD_TYPE_DIR=	dbg
 endif
 
 LIBDIR_NAME?=	lib$(LIBBITSUF)
@@ -52,10 +58,10 @@ LIBDIR_NAME?=	lib$(LIBBITSUF)
 # $(LIBDIR_BASE) is the base directory where the libraries will be built.
 LIBDIR_BASE?=	$(topdir)/$(LIBDIR_NAME)
 
-DSO_PLUGIN_SUBDIR=	snx/plugins
+DSO_PLUGIN_SUBDIR=	snx/plugins/$(BUILD_TYPE_DIR)
 DSO_PLUGIN_DIR=		$(LIBDIR_BASE)/$(DSO_PLUGIN_SUBDIR)
 
-PLUGIN_DSO=	$(PLUGIN_NAME)$(BUILD_TYPE_EXT).$(DYNAMICLIB_EXT)
+PLUGIN_DSO=	$(PLUGIN_NAME).$(DYNAMICLIB_EXT)
 DYLIB_DEPS=	$(PRE_DSO_PLUGIN_DEPS) @DSO_PLUGIN_DEPS@ $(POST_DSO_PLUGIN_DEPS)
 
 plugin-dso: $(DSO_PLUGIN_DIR)/$(PLUGIN_DSO)
