Fixed build breakage.  I guess I didn't test carefully enough last night.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13966 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/sonix/Makefile.inc.in
+++ b/juggler/modules/sonix/Makefile.inc.in
@@ -258,7 +258,7 @@ hier:
 	$(MTREE_CMD) -Ude -f $(mtreedir)/SNX.data.dist -p $(projdatadir)
 	$(MTREE_CMD) -Ude -f $(mtreedir)/SNX.include.dist -p $(prefix)
 	$(MTREE_CMD) -Ude -f $(mtreedir)/SNX.lib.dist -p $(prefix)
-	$(MTREE_CMD) -Ude -f $(mtreedir)/SNX.test.dist -p $(projdatadir)
+	$(MTREE_CMD) -Ude -f $(mtreedir)/SNX.samples.dist -p $(projdatadir)
 
 PREINSTALL=	pre-install
 POSTINSTALL=	post-install
