Bug fixed:	The subsystem string was not being expanded correctly in 		the Sonix version string (snx::SNX_VERSION).
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13977 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/sonix/configure.in
+++ b/juggler/modules/sonix/configure.in
@@ -320,6 +320,7 @@ AC_SUBST(UNIX_SNXROOT_ABS)
 AC_SUBST(UNIX_JUGGLERROOT_ABS)
 AC_SUBST(SNXROOT_ABS)
 AC_SUBST(JUGGLERROOT_ABS)
+AC_SUBST(VPR_SUBSYSTEM)
 
 AC_SUBST(EXTRA_LDFLAGS)
 AC_SUBST(RM_LN)
